kubernetes/apps/default/frigate/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: frigate
          image: ghcr.io/blakeblackshear/frigate:stable-tensorrt
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "4Gi"
              cpu: "4000m"
              nvidia.com/gpu: 1
          livenessProbe:
            httpGet:
              path: /api/version
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /api/version
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /media/frigate
              name: frigate-media
            - mountPath: /config
              name: frigate-config
            - mountPath: /dev/shm
              name: frigate-shm
      volumes:
        - name: frigate-configmap
          configMap:
            name: frigate-config
            items:
              - key: config.yml
                path: config.yml
        - name: frigate-media
          persistentVolumeClaim:
            claimName: frigate-media
        - name: frigate-config
          persistentVolumeClaim:
            claimName: frigate-config
        - name: frigate-shm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
