kubernetes/apps/default/frigate/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: frigate
