kubernetes/apps/default/frigate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Frigate"
    gethomepage.dev/description: "NVR with realtime object detection"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "frigate.svg"
    gethomepage.dev/pod-selector: "app=frigate"
spec:
  hostnames:
    - "frigate.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: frigate
          port: 5000
